--- a/Game Mathematics/렌더링 파이프라인.md
+++ b/Game Mathematics/렌더링 파이프라인.md
@@ -1,2 +1,15 @@
 # 렌더링 파이프라인
-<img scr="https://velog.velcdn.com/images/cedongne/post/102ae712-af4c-49f6-a181-af115b4d6def/image.png" width="200" height="600"/>
+3차원으로 만들어진 모델을 2차원에 투영하는 렌더링 과정의 프로세스이다.
+
+각 단계에 대한 자세한 설명은 [여기](https://steadycodist.tistory.com/entry/%EB%A9%B4%EC%A0%91-%EC%A4%80%EB%B9%84Graphics-%EB%A0%8C%EB%8D%94%EB%A7%81-%ED%8C%8C%EC%9D%B4%ED%94%84%EB%9D%BC%EC%9D%B8Rendering-Pipeline)!
+
+![img](https://velog.velcdn.com/images/cedongne/post/102ae712-af4c-49f6-a181-af115b4d6def/image.png)
+
+## 프로그래머블(Programmable) 파이프라인
+개발자가 GPU 연산에 관여할 수 있는 것이 프로그래머블 파이프라인이다.
+
+대부분의 과정은 정형화되어 있어 그래픽카드가 자동으로 처리하고 있으나, 응용력을 높이기 위해 개발자가 관여할 수 있도록 다음 함수를 제공하고 있다.
+
++ Vertex Shader : 삼각형을 구성하는 각 정점의 최종 데이터를 결정하는 함수
++ Pixel Shader : 삼각형 내부를 구성하는 각 픽셀의 최종 색상을 결정하는 함수
+
