--- a/Game Mathematics/렌더링 파이프라인.md
+++ b/Game Mathematics/렌더링 파이프라인.md
@@ -11,5 +11,5 @@
 대부분의 과정은 정형화되어 있어 그래픽카드가 자동으로 처리하고 있으나, 응용력을 높이기 위해 개발자가 관여할 수 있도록 다음 함수를 제공하고 있다.
 
 + Vertex Shader : 삼각형을 구성하는 각 정점의 최종 데이터를 결정하는 함수
-+ Pixel Shader : 삼각형 내부를 구성하는 각 픽셀의 최종 색상을 결정하는 함수
++ Pixel(Fragment) Shader : 삼각형 내부를 구성하는 각 픽셀의 최종 색상을 결정하는 함수
 
